@@ -1,5 +1,15 @@
 2010-01-04  Patrick Gansterer  <paroga@paroga.com>
 
+        Reviewed by Darin Adler.
+
+        Add cacheFlush support for WinCE
+        https://bugs.webkit.org/show_bug.cgi?id=33110
+
+        * jit/ExecutableAllocator.h:
+        (JSC::ExecutableAllocator::cacheFlush):
+
+2010-01-04  Patrick Gansterer  <paroga@paroga.com>
+
         Reviewed by Adam Roben.
 
         Implement NO_RETURN for COMPILER(MSVC).
